--- a/_config.yml
+++ b/_config.yml
@@ -95,14 +95,14 @@ email-share: True
 fb-share: True
 twitter-share: True
 linkedin-share: True
-reddit-share: True
+reddit-share: False
 google-plus-share: True
-tumblr-share: True
+tumblr-share: False
 pinterest-share: True
 pocket-share: True
-vkontakte-share: True
+vkontakte-share: False
 
-disqus-shortname: "panossakkos"
+disqus-shortname: "adrianolemos"
 
 syntax-highlight: True
 
@@ -145,11 +145,11 @@ author_blurb_image: "/img/author.jpg"
 
 social:
   - title: "facebook"
-    url: "https://facebook.com/"
+    url: "https://facebook.com/adriano.pinheiro.lemos"
   - title: "twitter"
-    url: "https://twitter.com/"
+    url: "https://twitter.com/lemos_dev"
   - title: "github"
-    url: "https://github.com/PanosSakkos/personal-jekyll-theme"
+    url: "https://github.com/adriano-lemos"
   - title: "rss"
     url: "/feed.xml"
 
