--- a/_config.yml
+++ b/_config.yml
@@ -41,7 +41,7 @@ favicon: "/img/al-tag-16px.ico"
 
 black-favicon: "/img/al-tag-16px.ico"
 
-background-img: "../img/intro-bg.jpg"
+# background-img: "../img/intro-bg.jpg"
 
 ##############################
 # Dynamic Text on the Header #
@@ -97,10 +97,10 @@ fb-share: True
 twitter-share: True
 linkedin-share: True
 reddit-share: False
-google-plus-share: True
+google-plus-share: False
 tumblr-share: False
-pinterest-share: True
-pocket-share: True
+pinterest-share: False
+pocket-share: False
 vkontakte-share: False
 
 disqus-shortname: "adrianolemos"
