--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site
-title:              Lemos Dev
+title:              Adriano Lemos
 bio:                'Um lugar para deixar alguns textos.'
 description:        "Um blog onde um possa registrar certas inquietações e informações."
 reading_time:       true
@@ -8,7 +8,7 @@ logo:               'assets/img/logo.png'
 # background:         'assets/img/placeholder-big.jpg'
 tiled_bg:           false   # Set this true if you want to tile your background image, otherwise it will be covered
 locale:             pt_BR
-url:                https://adriano-lemos-dev.github.io
+url:                https://adrianolemos.com
 
 # Jekyll
 permalink:          /:title/
